feat: callScript method modify(add generate log)